@@ -13,6 +13,8 @@ Tests/
   interference with locally installed .ldaprc or ldap.conf
 * by default back-mdb is now used for slapd-based tests
   which requires fairly recent OpenLDAP builds
+* env vars can be set for slapd.py to tweak path names
+  of executables, temporary and schema data to be used
 
 ----------------------------------------------------------------
 Released 2.4.35 2017-04-25
@@ -1390,4 +1392,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.427 2017/04/26 11:14:25 stroeder Exp $
+$Id: CHANGES,v 1.428 2017/04/26 13:12:52 stroeder Exp $
